created commands for game service
