# docs/swagger.json
@@ -53,7 +53,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/server.CreateGameRequest"
+                            "$ref": "#/definitions/game.CreateGameCommand"
                         }
                     }
                 ],
@@ -87,9 +87,6 @@
         },
         "/api/games/join": {
             "post": {
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -163,9 +160,6 @@
         },
         "/api/games/{gameID}/giveup": {
             "post": {
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -181,15 +175,6 @@
                         "name": "gameID",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "description": "Give up request",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/server.GiveUpRequest"
-                        }
                     }
                 ],
                 "responses": {
@@ -222,9 +207,6 @@
         },
         "/api/games/{gameID}/join": {
             "post": {
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -240,15 +222,6 @@
                         "name": "gameID",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "description": "Join game request",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/server.JoinGameRequest"
-                        }
                     }
                 ],
                 "responses": {
@@ -306,7 +279,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/server.MoveRequest"
+                            "$ref": "#/definitions/game.MakeMoveCommand"
                         }
                     }
                 ],
@@ -340,9 +313,6 @@
         },
         "/api/games/{gameID}/quit": {
             "post": {
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -358,15 +328,6 @@
                         "name": "gameID",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "description": "Quit request",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/server.QuitRequest"
-                        }
                     }
                 ],
                 "responses": {
@@ -538,6 +499,14 @@
         }
     },
     "definitions": {
+        "game.CreateGameCommand": {
+            "type": "object",
+            "properties": {
+                "private": {
+                    "type": "boolean"
+                }
+            }
+        },
         "game.Game": {
             "type": "object",
             "properties": {
@@ -611,19 +580,25 @@
                 "StatusCancelled"
             ]
         },
+        "game.MakeMoveCommand": {
+            "type": "object",
+            "properties": {
+                "gameID": {
+                    "type": "string"
+                },
+                "x": {
+                    "type": "integer"
+                },
+                "y": {
+                    "type": "integer"
+                }
+            }
+        },
         "server.AccessTokenResponse": {
             "type": "object",
             "properties": {
                 "access_token": {
                     "type": "string"
-                }
-            }
-        },
-        "server.CreateGameRequest": {
-            "type": "object",
-            "properties": {
-                "private": {
-                    "type": "boolean"
                 }
             }
         },
@@ -671,44 +646,6 @@
                     "$ref": "#/definitions/server.ErrorCode"
                 },
                 "error": {
-                    "type": "string"
-                }
-            }
-        },
-        "server.GiveUpRequest": {
-            "type": "object",
-            "properties": {
-                "game_id": {
-                    "type": "string"
-                }
-            }
-        },
-        "server.JoinGameRequest": {
-            "type": "object",
-            "properties": {
-                "game_id": {
-                    "type": "string"
-                }
-            }
-        },
-        "server.MoveRequest": {
-            "type": "object",
-            "properties": {
-                "game_id": {
-                    "type": "string"
-                },
-                "x": {
-                    "type": "integer"
-                },
-                "y": {
-                    "type": "integer"
-                }
-            }
-        },
-        "server.QuitRequest": {
-            "type": "object",
-            "properties": {
-                "game_id": {
                     "type": "string"
                 }
             }
